# gtk-text-editor

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
gtk-text-editor/: gtk-text-editor.cmb  layout.ui  main.py
