[tool.poetry]
name = "gtk-text-editor"
version = "2023.1"
description = "Text Editor with GTK and Python"
authors = ["Dan Yeaw <cookiecutter.email}}"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
